W-13145677: Modularize mule modules - artifact + container (#12748)